# tf-m-tools

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .gitreview  readme.rst
cmsis_pack/: README.md  clean.sh  gen_doc.sh  requirements.txt  setup.sh  setup_mps2.sh
cmsis_pack/tf-m-platform-mps2_addon/: ARM.V2M-MPS2_SSE_200_TFM-PF.pdsc  gen_pack.sh
cmsis_pack/tf-m-platform-mps2_patch/: 0001-Linker-scripts.patch  0002-Configuration-files.patch  0003-Platform-retarget.patch
cmsis_pack/tf-m-tests_addon/: ARM.TFM-Test.pdsc  gen_pack.sh
cmsis_pack/tf-m-tests_patch/: 0001-Conditional-tests.patch  0002-CMSIS-Header.patch  0003-Platform-headers.patch  0004-MSPLIM-setup.patch  0005-Test-thread-stack.patch
cmsis_pack/trusted-firmware-m_addon/: ARM.TFM.pdsc  gen_pack.sh
cmsis_pack/trusted-firmware-m_patch/: 0001-MbedTLS-cfg-MCUboot.patch  0002-Platform-templates.patch  0003-Platform-headers.patch  0004-Driver-include.patch  0005-MbedCrypto-header.patch  0006-Conditional-non-secure-client.patch  0007-Manifest-linker-objects.patch  0008-File-generator-headers.patch  0009-Doxygen-project-file.patch  0010-tfm_cmake_defaults.py.patch  0011-Typos-doxygen-annotations.patch
code-size-analyze-tool/: README.rst  code_size_analyze.py  code_size_diff.py
code-size-analyze-tool/src/: sq.py  ui.py
code_coverage/: filter_lcov_sources.py  generate_report_config_json.py  ingest_tarmac.py  tfm_generate_coverage_report.sh
depend-trace-tool/: README.rst  lib_trace.py
docs/: CMakeLists.txt  cmsis_pack.md  code-size-analyze-tool.rst  conf.py  doc_build.rst  fih_test_tool.rst  iat-verifier.rst  index.rst  irq_test_tool.rst  profiling.rst  squad-dashboard.rst  tf-m-manual-build.rst  tf_fuzz.md
docs/static_checks/: checkpatch.rst  clang_format.rst  git_hooks.rst  header_check.rst  index.rst
docs/tf_fuzz/: index.rst
example_partition/: CMakeLists.txt  tfm_example_partition.c  tfm_example_partition.yaml  tfm_example_partition_readme.rst
fih_test_tool/: Readme.rst  fih_test  fih_test_build_tfm.sh  fih_test_exec_qemu.sh  fih_test_make_manifest.sh  fih_test_run_gdb.sh  requirements.txt  util.sh
fih_test_tool/gdb-tool/: fih_test_gdb_python_script.py
iat-verifier/: README.rst  pyproject.toml  setup.py
iat-verifier/dev_scripts/: generate-sample-iat.py  pem2cose.py
iat-verifier/iatverifier/: attest_token_verifier.py  cca_claims.py  cca_token_verifier.py  psa_2_0_0_token_claims.py  psa_2_0_0_token_verifier.py  psa_iot_profile1_token_claims.py  psa_iot_profile1_token_verifier.py  util.py  verifiers.py  verify.py
iat-verifier/sample/cbor/: cca_platform_token.cbor  cca_token.cbor
iat-verifier/scripts/: __init__.py  check_iat  compile_token  compile_token.py  decompile_token  decompile_token.py
iat-verifier/tests/: synthetic_token_claims.py  synthetic_token_verifier.py  test_synthetic.py  test_utils.py  test_verifier.py
iat-verifier/tests/data/: cca-invalid-plat-challenge.yaml  cca_example_platform_token.cbor  cca_example_token.cbor  cca_example_token.yaml  cca_example_token_legacy.cbor  cca_example_token_legacy.yaml  cca_token.cbor  hmac.key  iat-hmac.cbor  iat.yaml  mk_tokens.sh  psa-2_0_0_token.yaml  valid-cca-token.yaml  valid-iat.yaml
iat-verifier/tests/synthetic_data/: correct_tagging.cbor  invalid_tags.cbor  inverted_p_header.cbor  inverted_p_header2.cbor  missing_tags.cbor  p_header_on.cbor  unexpected_tags.cbor  unknown_claims.cbor
irq_test_tool/: README.rst  irq_test.py  irq_test_Arm_DS_debugger.py  irq_test_abstract_debugger.py  irq_test_dummy_debugger.py  irq_test_executor.py  irq_test_gdb_debugger.py
irq_test_tool/example/: irqs_LPC55S69.json  irqs_Musca_A.json  irqs_SSE-200_AWS.json  testcase.json
irq_test_tool/tools/: generate_breakpoints.py
profiler/: profiler.c  readme.rst
profiler/export/: prof_common.h  prof_if_s.h
profiler/self-test/: CMakeLists.txt  prof_self_test.c
profiling/: readme.rst
profiling/export/: prof_hal.h  prof_intf_s.h
profiling/profiler/: profiler.c  profiler.h
profiling/profiler_self_test/: CMakeLists.txt  prof_self_test.c
profiling/profiling_cases/: config.cmake
profiling/profiling_cases/prof_log/: CMakeLists.txt  prof_log.h  prof_log_raw.c  prof_log_raw.h
profiling/profiling_cases/prof_psa_client_api/cases/non_secure/: CMakeLists.txt  non_secure_prof_psa_client_api.c  non_secure_prof_psa_client_api.h
profiling/profiling_cases/prof_psa_client_api/cases/secure/: CMakeLists.txt  secure_prof_psa_client_api.c  secure_prof_psa_client_api.h
profiling/profiling_cases/prof_psa_client_api/partitions/prof_client_partition/: CMakeLists.txt  prof_client_partition.c  prof_client_partition.yaml
profiling/profiling_cases/prof_psa_client_api/partitions/prof_server_partition/: CMakeLists.txt  prof_server_partition.c  prof_server_partition.yaml
profiling/profiling_cases/tfm_ns_profiling/: CMakeLists.txt  tfm_ns_profiling.c  tfm_ns_profiling.h
profiling/profiling_cases/tfm_profiling/: CMakeLists.txt  main_ns.c
static_checks/: README.rst  conf.py  run_all_checks.sh  utils.sh
static_checks/checkpatch/: checkpatch.conf  run_checkpatch.sh  setup.sh
static_checks/clang_format/: README.rst  run_clang_format.sh  setup.sh
static_checks/cppcheck/: README.rst  run_cppcheck.sh  setup.sh
static_checks/git_hooks/: pre-push
static_checks/header_check/: orgs_list.py  run_header_check.py  setup.sh
tf-m-manual-build/: README.rst
tf-m-manual-build/Linux/: build_images.sh  run_armclang.sh  run_documentation.sh  run_gnuarm.sh
tf-m-manual-build/Windows/: build_images.bat  run_armclang.bat  run_documentation.bat  run_gnuarm.bat
tf-m-manual-build/config/: tfm_clang_dependencies.txt  tfm_core_dependencies.txt  tfm_core_requirements_python3.txt  tfm_docs_dependencies.txt  tfm_docs_requirements_python3.txt  tfm_entrypoint.sh
tf_fuzz/: Makefile  README  tf_fuzz.cpp  tfz
tf_fuzz/calls/: crypto_call.hpp  sst_call.cpp
tf_fuzz/demo/: 11.test  12.5.test  22  (+10 more)
tf_fuzz/tfz-suitegen/: pyproject.toml
tf_fuzz/tfz-suitegen/src/tfz-suitegen/: __main__.py
tf_fuzz/tfz-suitegen/src/tfz-suitegen/suite_templates/: CMakeLists.txt  ns_test.c
(+193 files in other folders)
