[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iat-verifier"
version = "0.1.0"
description = "IAT verifier"
readme = "README.rst"
requires-python = ">=3.10"
dependencies = [
    "cbor2==5.9",
    "cryptography>=47.0.0",
    "ecdsa>=0.19.2",
    "pycose==1.1.0",
    "pyyaml",
    "pyyaml-include",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
check_iat = "scripts.check_iat:main"
compile_token = "scripts.compile_token:main"
decompile_token = "scripts.decompile_token:main"

[tool.hatch.build.targets.wheel]
packages = ["iatverifier", "scripts"]
