#  Copyright (c) 2024 Arm Limited. All Rights Reserved.
#
#  SPDX-License-Identifier: BSD-3-Clause

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "tfz-suitegen"
version = "0.0.1"
description = "Suite generator for the TF-Fuzz tool"
requires-python = ">=3.8"
dependencies = ["jinja2>=3.1"]
